--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <h1 style="padding:5% 0 ;">Show All Vlue</h1>
 
-        <button type="button" class="btn btn-primary">Show Value</button>
+        <button class="btn btn-primary">Show Value</button>
     </form>
     
 </body>
